# 8-bit-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: Bus.hpp  CPU.hpp
src/: Bus.cpp  CMakeLists.txt  CPU.cpp
