add_compile_options(${myCOMPILE_FLAGS})
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src" source)
include_directories ("${PROJECT_SOURCE_DIR}/include")
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${OPENGL_INCLUDE_DIRS})
include_directories(${GLUT_INCLUDE_DIRS})
# if(${MPI_CXX_FOUND})
#   include_directories( "${MPI_CXX_INCLUDE_PATH}")
#   link_libraries( "${MPI_CXX_LIBRARIES}")
# # if(${OpenMP_CXX_FOUND})
# #   include_directories( "${OpenMP_CXX_INCLUDE_DIRS}")
# #   add_compile_options("${OpenMP_CXX_FLAGS}")
# #   link_libraries( "${OpenMP_CXX_LIBRARIES}")
# endif()
# include_directories ("${YAML_PREFIX}/include")
# link_directories ("${YAML_PREFIX}/lib")
link_libraries(${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} /usr/local/lib/libpng.dylib)
link_libraries(${SDL2_LIBRARIES} /usr/local/lib/libSDL2_ttf.dylib)

add_executable(${PROJECT_NAME} ${source})
